no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
@@ -9,12 +9,13 @@ VERSION ==>                       #Same as @typescript-eslint/typescript-estree
 
 ESTREE ==>                        #Extends ESTree (see its doc) for TypeScript
 
-BABEL/PARSER ==>                 ##Some differences:
-                                 ##  - 'TSClassImplements|TSInterface' -> 'TSExpressionWithTypeArguments'
-                                 ##  - TS_FUNC_TYPE|TS_CONSTRUCTOR_TYPE|TS_METHOD_SIGNATURE|TS_CALL_SIGNATURE_DECLARATION|TS_CONSTRUCT_SIGNATURE_DECLARATION:
-                                 ##     - 'params' -> 'parameters'
-                                 ##     - 'returnType' -> 'typeAnnotation'
-                                 ##  - TS_TYPE_PARAMETER.name: IDENTIFIER -> STR
+SUPPORT ==>                       #Only @babel/parser and typescript-estree
+
+FLOW ==>                          #Not documented.
+                                  #Only supported by Babel
+
+NOTATION ==>                     =#Babel variant of TSESTree
+                                 b#Not supported by @babel/parser
 
 
                                              /=+===============================+=\
@@ -91,7 +92,7 @@ readonly TYPE[]                   #  - typeAnnotation TS_TYPE
 readonly [TYPE,...]               #  - operator: 'keyof|unique|readonly'
 
 { readonly ...[: TYPE],... }      #On CLASS_PROPERTY|TS_MAPPED_TYPE|TS_PROPERTY_SIGNATURE|TS_INDEX_SIGNATURE:
-                                  #  - [readonly BOOL]
+{ [+|-]readonly [T in TYPE]: ...} #  - [readonly BOOL|'+'|'-']
 
 TYPE[TYPE2]                       #Child of TS_TYPE, type 'TSIndexedAccessType':
                                   #  - objectType TS_TYPE (TYPE)
@@ -100,7 +101,6 @@ TYPE[TYPE2]                       #Child of TS_TYPE, type 'TSIndexedAccessType':
 { [T in TYPE]: TYPE2 }            #Child of TS_TYPE, type 'TSMappedType':
                                   #  - typeParameter TS_TYPE_PARAMETER (T in TYPE)
                                   #  - [typeAnnotation TS_TYPE] (TYPE2)
-                                  #readonly|optional are not supported by current parsers (but do not throw)
 
 
                                              /=+===============================+=\
@@ -126,8 +126,10 @@ symbol                            #Child of TS_TYPE, type 'TSSymbolKeyword'
 
 object                            #Child of TS_TYPE, type 'TSObjectKeyword'
 
-BOOL|NUM|STR|BIGINT               #Child of TS_TYPE, type 'TSLiteralType':
-                                  #  - literal LITERAL
+BOOL|NUM|STR                      #Child of TS_TYPE, type 'TSLiteralType':
+                                 b#  - literal LITERAL
+                                 =#  - literal *_LITERAL
+BIGINT                           b#Same
 
 
                                              /=+===============================+=\
@@ -138,8 +140,8 @@ BOOL|NUM|STR|BIGINT               #Child of TS_TYPE, type 'TSLiteralType':
 
 
 { VAR?[: TYPE],... }
-{ [T in TYPE]?: TYPE2 }           #On IDENTIFIER|TS_PROPERTY_SIGNATURE|TS_MAPPED_TYPE|TS_METHOD_SIGNATURE|TS_DECLARE_METHOD:
-(VAR?[: TYPE],...) => TYPE2       #  - [optional BOOL]
+{ [T in TYPE][+|-]?: TYPE2 }      #On IDENTIFIER|TS_PROPERTY_SIGNATURE|TS_MAPPED_TYPE|TS_METHOD_SIGNATURE|TS_DECLARE_METHOD:
+(VAR?[: TYPE],...) => TYPE2       #  - [optional BOOL|'+'|'-']
 
 [TYPE?,...]                       #Child of TS_TYPE, type 'TSOptionalType':
                                   #  - typeAnnotation TS_TYPE
@@ -203,19 +205,30 @@ class CLASS {}
                                   #  - [accessibility 'public|protected|private']
 abstract class ...                #On CLASS_DECLARATION:
                                   #  - [abstract BOOL]
-  abstract VAR|FUNC()             #On CLASS_PROPERTY|CLASS_METHOD|TS_DECLARE_METHOD:
-                                  #  - [abstract BOOL]
+  abstract VAR                   b#Type 'TSAbstractClassProperty' (like CLASS_PROPERTY)
+                                 =#On CLASS_PROPERTY:
+                                 =#  - [abstract BOOL]
+  abstract FUNC()                b#Type 'TSAbstractMethodDefinition' (like METHOD_DEFINITION)
+                                 =#On CLASS_METHOD|TS_DECLARE_METHOD:
+                                 =#  - [abstract BOOL]
 
 interface INTERFACE {}            #Child of DECLARATION, type 'TSInterfaceDeclaration':
                                   #  - id IDENTIFIER
-                                  #  - [extends TS_EXPRESSION_WITH_TYPE_ARGUMENTS_ARR]
                                   #  - body TS_INTERFACE_BODY (type 'TSInterfaceBody'):
                                   #     - body TS_TYPE_ELEMENT_ARR
 
-implements|extends PARENT         #Child of TS_TYPE, type 'TSClassImplements|TSInterface'
-                                  #  - expression EXPR (PARENT)
-                                  #On CLASS:
-                                  #  - implements TS_EXPRESSION_WITH_TYPE_ARGUMENTS_ARR
+extends PARENT                    #On INTERFACE:
+                                  #  - extends TS_INTERFACE_HERITAGE_ARR
+                                 b#Type 'TSInterfaceHeritage'
+                                 =#Type 'TSExpressionWithTypeArguments'
+                                  #Child of TS_TYPE:
+                                  #  - expression EXPR
+implements PARENT                 #On CLASS:
+                                  #  - implements TS_CLASS_IMPLEMENT_ARR
+                                 b#Type 'TSClassImplements'
+                                 =#Type 'TSExpressionWithTypeArguments'
+                                  #Child of TS_TYPE:
+                                  #  - expression EXPR
 
 
                                              /=+===============================+=\
@@ -228,20 +241,25 @@ implements|extends PARENT         #Child of TS_TYPE, type 'TSClassImplements|TSI
 ([...]VAR[?]: TYPE,...) => TYPE2  #Child of TS_TYPE, type 'TSFunctionType':
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR] (parameters, including type assertions)
                                   #  - [returnType TS_TYPE_ANNOTATION]
+                                 =#params -> parameters, returnType -> typeAnnotation
 new (...) => TYPE2                #Child of TS_TYPE, type 'TSConstructorType':
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR] (parameters, including type assertions)
                                   #  - [returnType TS_TYPE_ANNOTATION]
+                                 =#params -> parameters, returnType -> typeAnnotation
 { FUNC(...)[: TYPE2] }            #Type 'TSMethodSignature':
                                   #  - key EXPR
                                   #  - [computed BOOL] (when key is [STR])
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR]
                                   #  - [returnType TS_TYPE_ANNOTATION]
+                                 =#params -> parameters, returnType -> typeAnnotation
 { (...)[: TYPE2], ... }           #Type 'TSCallSignatureDeclaration':
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR]
                                   #  - [returnType TS_TYPE_ANNOTATION]
+                                 =#params -> parameters, returnType -> typeAnnotation
 { new (...)[: TYPE2] }            #Type 'TSConstructSignatureDeclaration':
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR]
                                   #  - [returnType TS_TYPE_ANNOTATION]
+                                 =#params -> parameters, returnType -> typeAnnotation
 
 this                              #Child of TS_TYPE, type 'TSThisType'
                                   #When used as return value type
@@ -296,14 +314,15 @@ function <T,...>(...) {...}       #TS_CONSTRUCTOR_TYPE|TS_DECLARE_FUNCTION|TS_DE
 declare function <T,...>(...)     #     - params TS_TYPE_PARAMETER_ARR
 
  T [extends TYPE3][ = TYPE4]      #Type 'TSTypeParameter':
- T in TYPE3                       #  - [name IDENTIFIER]
+ T in TYPE3                      b#  - [name IDENTIFIER]
+                                 =#  - [name STR]
                                   #  - [constraint TYPE3]
                                   #  - [default TYPE4]
 
-TYPE<TYPE2_VAR,...>               #Type 'TSTypeParameterInstantiation':
-                                  #  - params TS_TYPE_ARR
-                                  #On CALL_EXPRESSION|NEW_EXPRESSION|TS_TYPE_REFERENCE|TS_EXPRESSION_WITH_TYPE_ARGUMENT:
+TYPE<TYPE2_VAR,...>               #On CALL_EXPRESSION|NEW_EXPRESSION|TS_TYPE_REFERENCE|TS_EXPRESSION_WITH_TYPE_ARGUMENT:
                                   #  - [typeParameters TS_TYPE_PARAMETERS_INSTANTIATION]
+                                  #Type 'TSTypeParameterInstantiation':
+                                  #  - params TS_TYPE_ARR
 extends PARENT<...>               #On CLASS_DECLARATION|CLASS_EXPRESSION:
                                   #  - [superTypeParameters TS_TYPE_PARAMETERS_INSTANTIATION]
 
@@ -368,7 +387,7 @@ VAR is TYPE                       #Child of TS_TYPE, type 'TSTypePredicate':
 
 namespace NAMESPACE {}            #Child of DECLARATION, type 'TSModuleDeclaration':
 declare module "MODULE" {}        #  - id IDENTIFIER|LITERAL
-declare module "MODULE"           #  - body TS_MODULE_BLOCK (NAMESPACE) or TS_MODULE_DECLARATION (module|global):
+declare module "MODULE"           #  - [body TS_MODULE_BLOCK]
 declare global {}                 #  - [global BOOL]
                                   #Type 'TSModuleBlock':
                                   #  - body STATEMENT_ARR
@@ -385,7 +404,8 @@ declare global ...                #  - [declare BOOL]
 
 declare [async] function FUNC()   #Child of DECLARATION, type 'TSDeclareFunction'. Like FUNCTION_DECLARATION except no body
 
-class ... { FUNC() }              #Type 'TSDeclareMethod'. Like METHOD_DEFINITION except no body
+class ... { FUNC() }             b#METHOD_DEFINITION with no body
+                                 =#Type 'TSDeclareMethod'. Like CLASS_METHOD except no body
 
 
                                              /=+===============================+=\
