--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -7,7 +7,6 @@
 
 See:
   - updates:
-     - https://github.com/Microsoft/TypeScript/wiki/What's-new-in-TypeScript#typescript-26
      - https://github.com/microsoft/TypeScript/wiki/Breaking-Changes
      - https://devblogs.microsoft.com/typescript/
   - source like https://github.com/microsoft/TypeScript/blob/master/src/lib/es5.d.ts
@@ -36,6 +35,7 @@ CONF                              #Can be:
                                   #  - -p|--project CONF_PATH
                                   #CONF files are ignored when FILE... passed to tsc
                                   #Unless specified otherwise, all BOOL options default to false
+                                  #CONF_FILE.json can contain comments
 CONF_PATH                         #Either CONF_FILE.json or DIR with tsconfig.json it
 CONF.extends                      #'PATH|MODULE' to a CONF2 to merge with lower priority
                                   #If 'MODULE', uses PACKAGE.tsconfig 'PATH' or ROOT/tsconfig.json
@@ -57,6 +57,7 @@ CONF.include|exclude              #Input FILEs but as 'GLOB'_ARR
                                   #It is based on --rootDir DIR2, which is the input files root (def: the lowest common root)
 --outFile FILE2                   #Concatenate into single output FILE2
                                   #Cannot be used with --module es*|umd
+                                  #Can be /dev/stdout (on Unix)
 
 --noEmit                          #Do not transpile (only type check).
 --noEmitOnErrors                  #Do not transpile if type checks failed
@@ -224,7 +225,10 @@ never                             #No possible TYPE.
                                   #Examples:
                                   #  - union with no members
                                   #  - intersection with nothing in common
-                                  #  - return statement that can't be reached (e.g. exception, or type guard that can't be true)
+                                  #  - return statement that can't be reached, e.g.:
+                                  #     - exception
+                                  #     - type guard that can't be true
+                                  #     - infinite loop
 
 undefined                         #
 null                              #
@@ -451,11 +455,10 @@ function FUNC(...): TYPE3 {...}   #Each overload is tried in order until one mat
 
 VAL!                              #Transtype to same TYPE minus undefined|null
 
-var|let VAR[: TYPE]               #Unitialized VARs are allowed even if their TYPE does not allow undefined.
-var|let VAR!: TYPE                #They use their TYPE for assignments|transtyping, like initialized VARs.
-                                  #But they cannot use any operators (including VAR.VAR2 or ===) unless either:
-                                  #  - they are TYPE any|untyped
-                                  #  - ! was used
+var|let VAR[: TYPE]               #If TYPE does not allow undefined (which excludes any|untyped):
+var|let VAR!: TYPE                #  - VAR cannot be referenced until assigned
+                                  #     - including using any operators (including VAR.VAR2, === or rvalue =)
+                                  #  - unless ! is used
                                   #If TYPE any|untyped used at declaration time, their new TYPE won't be inferred when a new value is assigned:
                                   #  - unless --noImplicitAny
                                   #  - including for elements of an empty ARR (whose default type is any[])
@@ -605,7 +608,7 @@ AMBIENT FILE ==>                  #File where every statement is declaration|TYP
                                   #  - when merging several source "DIR" into single "DIR2" during build
                                   #  - when "DIR" are dynamically generated and might not exist
 
-FILE EXTENSIONS ==>               #import 'PATH' must not include .EXT
+FILE EXTENSIONS ==>               #import 'PATH' must not include .EXT if .ts[x]|.d.ts
                                   #import 'PATH|MODULE' tries several times using (in order) .ts[x], .d.ts, (if --allowJs) .js[x]
                                   #  - including PACKAGE.main, i.e. 'FILE.js' will search for 'FILE.ts[x]|d.ts'
 
