no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -671,7 +671,8 @@ TYPE<TYPE2,...>                   #Using a generic TYPE
 
 
 <TYPE>VAL                         #Type assertion of a VAL
-VAL as TYPE                       #Has stronger operator precedence than everything except () .VAR [INDEX] new (...ARGS) ++ --
+VAL as TYPE                       #Prefer the second syntax as JSX do not allow the first one
+                                  #Has stronger operator precedence than everything except () .VAR [INDEX] new (...ARGS) ++ --
                                   #As opposed to other type assertions, bypasses transtyping rules
 
 QUAL VAR: TYPE [= VAL]            #Type assertion during VAR declaration
