no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -454,8 +454,11 @@ VAL!                              #Transtype to same TYPE minus undefined|null
 var|let VAR[: TYPE]               #Unitialized VARs are allowed even if their TYPE does not allow undefined.
 var|let VAR!: TYPE                #They use their TYPE for assignments|transtyping, like initialized VARs.
                                   #But they cannot use any operators (including VAR.VAR2 or ===) unless either:
-                                  #  - they are TYPE any or untyped
+                                  #  - they are TYPE any|untyped
                                   #  - ! was used
+                                  #If TYPE any|untyped used at declaration time, their new TYPE won't be inferred when a new value is assigned:
+                                  #  - unless --noImplicitAny
+                                  #  - including for elements of an empty ARR (whose default type is any[])
 class ... { VAR!: TYPE; ... }     #Useful when VAR is initialized but it cannot be guessed compile-time, e.g. when done in different scope.
 --strictPropertyInitialization    #Do not allow class properties:
                                   #  - whose TYPE does not include undefined
@@ -505,7 +508,7 @@ TYPE INFERENCE ==>                #Only needed for untyped values:
                                   #     - const|no declaration: use specific value as TYPE (e.g. NUM|BOOL|STR|unique symbol)
                                   #  - OBJ:
                                   #     - do it recursively
-                                  #     - properties are only considered const when using <const> assertion
+                                  #     - properties are only considered const when using <const> assertion or readonly
                                   #  - ARR:
                                   #     - same but as a union
                                   #     - if empty -> never[]
