no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -14,10 +14,12 @@ VERSION ==>                       #Last commit 26/01/2018
 TYPESCRIPT/FLOW ==>               #See TSESTree
 
 NOTATION ==>                     -#Pull requests
+                                 ##Outside of ESTree
                                  B#@babel/parser
-                                aA#acorn
+                                 A#acorn
                                  E#Espree
                                  T#Typescript-estree
+                                 S#Esprima
                                   #Lowercase means "not present"
 
 
@@ -33,12 +35,12 @@ OPTIONAL VALUES ==>               #Are either defined or null
 any                               #NODE:
                                   #  - type STR
                                   #  - [loc] (position in source code):
-                                  #     - [source STR]
-                                AT#     - start|end:
+                             beats#     - [source STR]
+                                  #     - start|end:
                                   #        - line NUM (1-indexed)
                                   #        - column NUM (0-indexed)
-                                 A#  - start|end NUM (not line-wise)
-                                 AT#  - range [NUM, NUM2] (not line-wise)
+                                t##  - start|end NUM (not line-wise)
+                                b##  - range [NUM, NUM2] (not line-wise)
                                   #It is root type, abstract:
                                   #  - all other types inherit from it
                                   #  - all redefine type STR, except if abstract types themselves
@@ -75,9 +77,9 @@ NON_TOKEN                        -#CST node not present in AST:
                                              \=+===============================+=/
 
 
-FILE                              #Type 'File':
-                                  #  - program PROGRAM
-                                  #  - [name STR]
+FILE                            B##Type 'File':
+                                B##  - program PROGRAM
+                                B##  - [name STR]
 PROGRAM                           #Type 'Program':
                                   #  - sourceType 'script|module'
                                   #  - body STATEMENT|MODULE_DECLARATION_ARR
@@ -86,35 +88,37 @@ STATEMENT                         #
 EXPR_STATEMENT                    #Statement with single EXPR.
                                   #Child of STATEMENT, type 'ExpressionStatement':
                                   #  - expression EXPR
-(EXPR)                           A#Child of EXPRESSION_STATEMENT, type 'ParenthesizedExpression'
+(EXPR)                          A##Child of EXPRESSION_STATEMENT, type 'ParenthesizedExpression'
+                                B##On EXPR:
+                                B##  - parenthesized BOOL
+                                B##  - parenStart NUM
 
-#!/bin/bash                      B#Type 'InterpreterDirective'
-                                 B#  - value STR
-                                 B#On PROGRAM:
-                                 B#  - interpreter INTERPRETER_DIRECTIVE
+#!/bin/bash                     B##Type 'InterpreterDirective'
+                                B##  - value STR
+                                B##On PROGRAM:
+                                B##  - interpreter INTERPRETER_DIRECTIVE
 'use strict'                      #Child of EXPR_STATEMENT:
                                   #  - directive STR
                                   #  - expression LITERAL
-                                 B#Type 'Directive':
-                                 B#  - value STR
-                                 B#  - extra.raw[Value] STR
-                                 B#On PROGRAM:
-                                 B#  - directives DIRECTIVE_ARR
+                                B##Type 'Directive':
+                                B##  - value STR
+                                B##  - extra.raw[Value] STR
+                                B##On PROGRAM|BLOCK_STATEMENT:
+                                B##  - directives DIRECTIVE_ARR
 
-;                                 #Empty statement, with only semicolon
-                                  #Child of STATEMENT, type 'EmptyStatement'
+;                                 #Child of STATEMENT, type 'EmptyStatement'
+                                  #Empty statement, with only semicolon
 {...}                             #Child of STATEMENT, type 'BlockStatement':
                                   #  - body STATEMENT_ARR
 
-// COMMENT                        #On NODE:
-/* COMMENT */                     #  - [comments COMMENT_ARR]
-                                 B#  - [leadingComment|trailingComments COMMENT_ARR]
-                                  #On PROGRAM:
-                                 T#  - comments COMMENT_ARR
-                                  #COMMENT:
-                                  #  - type 'Line|Block'
-                                 B#  - type 'CommentLine|Block'
-                                  #  - value STR
+// COMMENT                       ##On NODE:
+/* COMMENT */                   B##  - [leadingComment|trailingComments COMMENT_ARR]
+                                 ##On PROGRAM:
+                                a##  - comments COMMENT_ARR
+                                 ##COMMENT:
+                                 ##  - type 'Line|Block'
+                                B##  - type 'CommentLine|Block'
+                                 ##  - value STR
 
 
                                              /=+===============================+=\
